# admin

./: .gitignore  Cargo.toml  admin.conf  build.rs  chroot-build.sh
src/: lib.rs  main.rs
src/api/: api.rs  router.rs
src/auth/: mod.rs  tokens.rs
src/backup/: mod.rs  scheduler.rs  sender.rs  splitter.rs
src/base/: args.rs  config.rs  log.rs  signal.rs
src/bot/: bot.rs  common.rs  router.rs
src/kv/: backup.rs  bot.rs  kv.rs  meta.rs
src/logs/: formatter.rs  mod.rs  server.rs
src/services/: flatdb.rs  mod.rs  scheduler.rs
